--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo Site</title>
     <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <div class="container">
-        <h1 style="margin-bottom: 50px;">Welcome my Todo Website</h1>
+        <h1 class="welcome">Welcome my Todo Website</h1>
 
         <form action="/add" method="post">
             <div class="todoBody">
@@ -26,9 +27,9 @@
             <div class="list-content">
                 <p class="margin-10px"> {{todo.id}} | {{todo.title}} </p>
                 {% if todo.complete==False %}
-                <span class="margin-10px not-complete">Not Completed</span>
+                <span class="margin-10px not-complete">Not Completed <i style="margin-left: 3px;" class="fas fa-times"></i> </span>
                 {% else %}
-                <span class="margin-10px complete">Completed</span>
+                <span class="margin-10px complete">Completed <i style="margin-left: 3px;" class="fas fa-check-double"></i></span>
                 {%endif%}
             </div>
             <div class="list-changers">
@@ -55,8 +56,8 @@
         {%endfor%}
     </div>
     <div class="message">
-        Do <br> Your <br> Work <br>Don't <br> be <br> Stupid
+       <h1>Do <br> Your <br> Work <br>Don't <br> be <br> Stupid</h1>
     </div>
 </body>
-
+<footer><a class="me" href="https://github.com/turyanazizov" target="_blank">Turyan Azizov</a></footer>
 </html>
